--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,9 +81,11 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'com.android.support:design:26.1.0'
     compile 'com.android.support:cardview-v7:26.1.0'
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.0.2'
-    compile 'com.squareup.okhttp3:okhttp:3.7.0'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    compile 'com.squareup.okhttp3:okhttp:3.9.1'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.9.1'
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'fm.jiecao:jiecaovideoplayer:5.3'
     compile 'com.github.bumptech.glide:glide:4.0.0'
@@ -96,8 +98,10 @@ dependencies {
     compile 'pub.devrel:easypermissions:1.0.0'
     compile 'in.srain.cube:ultra-ptr:1.0.11'
     compile 'com.contrarywind:Android-PickerView:3.2.5'
-    compile 'io.reactivex:rxjava:1.0.14'
-    compile 'io.reactivex:rxandroid:1.0.1'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    // Because RxAndroid releases are few and far between, it is recommended you also
+    // explicitly depend on RxJava's latest version for bug fixes and new features.
+    compile 'io.reactivex.rxjava2:rxjava:2.1.7'
     //compile 'com.jakewharton:butterknife:8.8.1'
     //annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     compile 'com.google.dagger:dagger-android:2.14.1'
@@ -105,5 +109,6 @@ dependencies {
     // if you use the support libraries
     annotationProcessor 'com.google.dagger:dagger-android-processor:2.14.1'
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:multidex:1.0.2'
     compile 'org.jetbrains:annotations-java5:15.0'
 }
