some test for data binding

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,12 +102,20 @@ dependencies {
     // Because RxAndroid releases are few and far between, it is recommended you also
     // explicitly depend on RxJava's latest version for bug fixes and new features.
     compile 'io.reactivex.rxjava2:rxjava:2.1.7'
+    compile 'com.trello.rxlifecycle2:rxlifecycle:2.2.1'
+    // If you want to bind to Android-specific lifecycles
+    //compile 'com.trello.rxlifecycle2:rxlifecycle-android:2.2.1'
+    // If you want pre-written Activities and Fragments you can subclass as providers
+    compile 'com.trello.rxlifecycle2:rxlifecycle-components:2.2.1'
+    // If you want to use Android Lifecycle for providers
+    //compile 'com.trello.rxlifecycle2:rxlifecycle-android-lifecycle:2.2.1'
     //compile 'com.jakewharton:butterknife:8.8.1'
     //annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     compile 'com.google.dagger:dagger-android:2.14.1'
     compile 'com.google.dagger:dagger-android-support:2.14.1'
     // if you use the support libraries
     annotationProcessor 'com.google.dagger:dagger-android-processor:2.14.1'
+    compile 'com.tbruyelle.rxpermissions:rxpermissions:0.9.4@aar'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:multidex:1.0.2'
     compile 'org.jetbrains:annotations-java5:15.0'
