--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,7 +88,9 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.9.1'
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'fm.jiecao:jiecaovideoplayer:5.3'
-    compile 'com.github.bumptech.glide:glide:4.0.0'
+    compile 'com.github.bumptech.glide:glide:4.3.0'
+
+    //annotationProcessor 'com.github.bumptech.glide:compiler:4.5.0'
     compile 'com.squareup.picasso:picasso:2.3.2'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
