--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,7 +89,6 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'fm.jiecao:jiecaovideoplayer:5.3'
     compile 'com.github.bumptech.glide:glide:4.3.0'
-
     //annotationProcessor 'com.github.bumptech.glide:compiler:4.5.0'
     compile 'com.squareup.picasso:picasso:2.3.2'
     compile 'com.nineoldandroids:library:2.4.0'
@@ -98,7 +97,7 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
     compile 'pub.devrel:easypermissions:1.0.0'
-    compile 'in.srain.cube:ultra-ptr:1.0.11'
+    //compile 'in.srain.cube:ultra-ptr:1.0.11'
     compile 'com.contrarywind:Android-PickerView:3.2.5'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     // Because RxAndroid releases are few and far between, it is recommended you also
@@ -122,4 +121,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:multidex:1.0.2'
     compile 'org.jetbrains:annotations-java5:15.0'
+    implementation project(':ptr-lib')
 }
