--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,7 @@
 
         <activity
             android:name=".ui.activity.guide.SplashActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
             android:theme="@style/AppTheme.FullScreen.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -67,14 +68,18 @@
         </activity>
         <activity
             android:name=".ui.activity.guide.HomeActivity"
-            android:launchMode="singleTask"
-            android:screenOrientation="portrait">
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activity.DemonstrationActivity" />
-        <activity android:name=".ui.activity.DemoActivity"></activity>
+        <activity
+            android:name=".ui.activity.DemonstrationActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activity.DemoActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
