--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,7 +89,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'fm.jiecao:jiecaovideoplayer:5.3'
     compile 'com.github.bumptech.glide:glide:4.3.0'
-    //annotationProcessor 'com.github.bumptech.glide:compiler:4.5.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.3.0'
     compile 'com.squareup.picasso:picasso:2.3.2'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
@@ -122,4 +122,5 @@ dependencies {
     compile 'com.android.support:multidex:1.0.2'
     compile 'org.jetbrains:annotations-java5:15.0'
     implementation project(':ptr-lib')
+    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.34'
 }
