--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,16 +88,19 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.9.1'
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'fm.jiecao:jiecaovideoplayer:5.3'
-    compile 'com.github.bumptech.glide:glide:4.3.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.3.0'
+    api('com.github.bumptech.glide:glide:4.5.0') {
+        exclude group: 'com.android.support'
+    }
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.5.0'
     compile 'com.squareup.picasso:picasso:2.3.2'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
     compile 'com.google.android:flexbox:0.2.6'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
-    compile 'pub.devrel:easypermissions:1.0.0'
-    //compile 'in.srain.cube:ultra-ptr:1.0.11'
+    api('pub.devrel:easypermissions:1.1.3') {
+        exclude group: 'com.android.support'
+    }
     compile 'com.contrarywind:Android-PickerView:3.2.5'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     // Because RxAndroid releases are few and far between, it is recommended you also
@@ -115,9 +118,10 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     compile 'com.google.dagger:dagger-android:2.14.1'
     compile 'com.google.dagger:dagger-android-support:2.14.1'
-    // if you use the support libraries
     annotationProcessor 'com.google.dagger:dagger-android-processor:2.14.1'
-    compile 'com.tbruyelle.rxpermissions:rxpermissions:0.9.4@aar'
+    api('com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar') {
+        exclude group: 'com.android.support'
+    }
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:multidex:1.0.2'
     compile 'org.jetbrains:annotations-java5:15.0'
