--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,14 +5,14 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'org.greenrobot:greendao-gradle-plugin:3.2.0'
+        classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
     }
 }
 greendao {
     schemaVersion 1//指定数据库schema版本号，迁移等操作会用到
-    daoPackage 'xysx.com.tzq.bean.gen'//通过gradle插件生成的数据库相关文件的包名，默认为entity所在的包名
+    daoPackage 'cn.bpzzr.change.bean.gen'//通过gradle插件生成的数据库相关文件的包名，默认为entity所在的包名
     targetGenDir 'src/main/java'//自定义生成数据库文件的目录了，可以将生成的文件放到我们的java目录中
-    //targetGenDirTest：设置生成单元测试目录
+    //targetGenDirTest'cn.bpzzr.change.test'//：设置生成单元测试目录
     //generateTests：设置自动生成单元测试用例
 }
 android {
@@ -88,10 +88,14 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.9.1'
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'fm.jiecao:jiecaovideoplayer:5.3'
+    compile 'org.greenrobot:greendao:3.2.2'
     api('com.github.bumptech.glide:glide:4.5.0') {
         exclude group: 'com.android.support'
     }
     annotationProcessor 'com.github.bumptech.glide:compiler:4.5.0'
+    api( "com.github.bumptech.glide:okhttp3-integration:4.5.0"){
+        exclude group: 'com.android.support'
+    }
     compile 'com.squareup.picasso:picasso:2.3.2'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
