--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,6 +89,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'fm.jiecao:jiecaovideoplayer:5.3'
     compile 'org.greenrobot:greendao:3.2.2'
+    annotationProcessor 'org.greenrobot:greendao:3.2.2'
     api('com.github.bumptech.glide:glide:4.5.0') {
         exclude group: 'com.android.support'
     }
