--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,7 +94,7 @@ dependencies {
         exclude group: 'com.android.support'
     }
     annotationProcessor 'com.github.bumptech.glide:compiler:4.5.0'
-    api( "com.github.bumptech.glide:okhttp3-integration:4.5.0"){
+    api('com.github.bumptech.glide:okhttp3-integration:4.5.0') {
         exclude group: 'com.android.support'
     }
     compile 'com.squareup.picasso:picasso:2.3.2'
