--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+//apply plugin: 'kotlin-android'
 apply plugin: 'org.greenrobot.greendao'
 buildscript {
     repositories {
@@ -127,10 +128,15 @@ dependencies {
     api('com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar') {
         exclude group: 'com.android.support'
     }
+    compile 'com.alibaba:fastjson:1.1.68.android'
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:multidex:1.0.2'
+    compile 'com.android.support:multidex:1.0.3'
     compile 'org.jetbrains:annotations-java5:15.0'
     implementation project(':ptr-lib')
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.34'
     compile 'com.youth.banner:banner:1.4.10'
+//    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
