--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-//apply plugin: 'kotlin-android'
 apply plugin: 'org.greenrobot.greendao'
 buildscript {
     repositories {
@@ -77,65 +76,65 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.android.support:support-v4:26.1.0'
-    compile 'com.android.support:recyclerview-v7:26.1.0'
-    compile 'com.android.support:design:26.1.0'
-    compile 'com.android.support:cardview-v7:26.1.0'
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
-    compile 'com.squareup.okhttp3:okhttp:3.9.1'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.9.1'
-    compile 'com.google.code.gson:gson:2.8.0'
-    compile 'fm.jiecao:jiecaovideoplayer:5.3'
-    compile 'org.greenrobot:greendao:3.2.2'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:cardview-v7:26.1.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.9.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
+    implementation 'com.google.code.gson:gson:2.8.0'
+    implementation 'cn.jzvd:jiaozivideoplayer:6.2.9'
+    implementation 'org.greenrobot:greendao:3.2.2'
     annotationProcessor 'org.greenrobot:greendao:3.2.2'
-    api('com.github.bumptech.glide:glide:4.5.0') {
+    implementation('com.github.bumptech.glide:glide:4.5.0') {
         exclude group: 'com.android.support'
     }
     annotationProcessor 'com.github.bumptech.glide:compiler:4.5.0'
-    api('com.github.bumptech.glide:okhttp3-integration:4.5.0') {
+    implementation('com.github.bumptech.glide:okhttp3-integration:4.5.0') {
         exclude group: 'com.android.support'
     }
-    compile 'com.squareup.picasso:picasso:2.3.2'
-    compile 'com.nineoldandroids:library:2.4.0'
-    compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
-    compile 'com.google.android:flexbox:0.3.2'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
-    api('pub.devrel:easypermissions:1.1.3') {
+    implementation 'com.squareup.picasso:picasso:2.3.2'
+    implementation 'com.nineoldandroids:library:2.4.0'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.2'
+    implementation 'com.google.android:flexbox:0.3.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
+    implementation('pub.devrel:easypermissions:1.1.3') {
         exclude group: 'com.android.support'
     }
-    compile 'com.contrarywind:Android-PickerView:3.2.5'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'com.contrarywind:Android-PickerView:3.2.5'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     // Because RxAndroid releases are few and far between, it is recommended you also
     // explicitly depend on RxJava's latest version for bug fixes and new features.
-    compile 'io.reactivex.rxjava2:rxjava:2.1.7'
-    compile 'com.trello.rxlifecycle2:rxlifecycle:2.2.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.7'
+    implementation 'com.trello.rxlifecycle2:rxlifecycle:2.2.1'
     // If you want to bind to Android-specific lifecycles
     //compile 'com.trello.rxlifecycle2:rxlifecycle-android:2.2.1'
     // If you want pre-written Activities and Fragments you can subclass as providers
-    compile 'com.trello.rxlifecycle2:rxlifecycle-components:2.2.1'
+    implementation 'com.trello.rxlifecycle2:rxlifecycle-components:2.2.1'
     // If you want to use Android Lifecycle for providers
     //compile 'com.trello.rxlifecycle2:rxlifecycle-android-lifecycle:2.2.1'
-    //compile 'com.jakewharton:butterknife:8.8.1'
-    api 'com.jakewharton:butterknife:8.8.1'
+    implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    compile 'com.google.dagger:dagger-android:2.14.1'
-    compile 'com.google.dagger:dagger-android-support:2.14.1'
+    implementation 'com.google.dagger:dagger-android:2.14.1'
+    implementation 'com.google.dagger:dagger-android-support:2.14.1'
     annotationProcessor 'com.google.dagger:dagger-android-processor:2.14.1'
-    api('com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar') {
+    implementation('com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar') {
         exclude group: 'com.android.support'
     }
-    compile 'com.alibaba:fastjson:1.1.68.android'
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:multidex:1.0.3'
-    compile 'org.jetbrains:annotations-java5:15.0'
+    implementation 'com.alibaba:fastjson:1.1.68.android'
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'org.jetbrains:annotations-java5:15.0'
     implementation project(':ptr-lib')
-    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.34'
-    compile 'com.youth.banner:banner:1.4.10'
-//    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.34'
+    implementation 'com.youth.banner:banner:1.4.10'
+    implementation 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:5.1.4'
+    implementation files('libs/alipaySdk-20170922.jar')
 }
 repositories {
     mavenCentral()
