--- a/app/build.gradle
+++ b/app/build.gradle
@@ -135,6 +135,7 @@ dependencies {
     implementation 'com.youth.banner:banner:1.4.10'
     implementation 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:5.1.4'
     implementation files('libs/alipaySdk-20170922.jar')
+    implementation project(':audiolibrary')
 }
 repositories {
     mavenCentral()
