--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,10 @@
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
+    <permission
+        android:name="cn.xysxtzq.audiolibrary.permission.ACCESS_AUDIO_PLAY_SERVICE"
+        android:protectionLevel="normal" />
+
     <application
         android:name=".global.Change"
         android:allowBackup="true"
@@ -80,6 +84,19 @@
         <activity
             android:name=".ui.activity.DemoActivity"
             android:screenOrientation="portrait" />
+        <!--音频播放服务的注册-->
+        <service
+            android:name="cn.xysxtzq.audiolibrary.service.AudioPlayService"
+            android:enabled="true"
+            android:exported="true"
+            android:permission="cn.xysxtzq.audiolibrary.permission.ACCESS_AUDIO_PLAY_SERVICE"
+            android:process=":audioPlayService">
+            <intent-filter>
+                <action android:name="cn.xysxtzq.audiolibrary.action.AUDIO_PLAY_SERVICE" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
