--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,9 @@
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
+    <uses-permission android:name="xysx.com.tzq.permission.HOME_LAUNCHER"/>
+
+
     <permission
         android:name="cn.xysxtzq.audiolibrary.permission.ACCESS_AUDIO_PLAY_SERVICE"
         android:protectionLevel="normal" />
