--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
     defaultConfig {
         applicationId "cn.bpzzr.change"
         minSdkVersion 19
-        targetSdkVersion 'P'
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
