--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':ptr-lib', ':audiolibrary', ':myuilibrary'
+include ':app', ':ptr-lib', ':audiolibrary', ':myuilibrary', ':tzqlibrary'
